--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{ box-sizing:border-box; }
+
+.App {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  transition: all 300ms linear;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App > h1 {
+  margin: 0;
+  padding: 1em;
+  text-align: center;
+  background: #333;
+  color: white;
+}
+
+section {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+button {
+  margin: 1em;
+  padding: 1em;
+  width: 40%;
+  min-width: 300px;
+  font-size: 2em;
+  background: white;
+}
+
+.off i {
+  filter: grayscale(100%);
+}
+
+i {
+  font-style: normal;
 }
